# cpp_project_stub_cmake_gtest

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  math.cpp
test/: CMakeLists.txt  test.cpp
